# allure-telegram-bot

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  exceptions.py  logging.conf  pyproject.toml  setup_bot.py
adapters/: allure.py  allure_adapter.py
handlers/: commands.py  utils.py
persistence/: mongo.py  mongo_persistence.py
reporters/: chart.py  chart_reporter.py
tools/: dates.py  http_client.py
