[tool.poetry]
name = "Allure TestOps telegram bot"
version = "1.0.0"
description = "Telegram bot for testing management"
authors = ["Eftech Team"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
emoji = "^1.7.0"
matplotlib = "^3.6.3"
pytz = "^2022.1"
pymongo = "^4.1.1"
python-dotenv = "^0.20.0"
python-telegram-bot = "^13.12"
requests = "^2.28.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mccabe = "0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
